[tool.poetry]
name = "fsplanner"
version = "0.1.0"
description = ""
authors = ["jcranston <jcranston92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
